--- a/bank-api/src/main/resources/application.yaml
+++ b/bank-api/src/main/resources/application.yaml
@@ -1,3 +1,46 @@
+server:
+  port: 8080
+
+spring:
+  application:
+    name: bank-api
+  # Database Configuration
+  datasource:
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/tdd1?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
+    username: dmitry
+    password: dbfwkqndfls*51
+  # JPA
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    database-platform: org.hibernate.dialect.MySQLDialect
+    properties:
+      hibernate:
+        format_sql: true
+  # Redis
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 5000ms
+      username: default
+      password: systempass
+
+logging:
+  level:
+    com.example.bank: INFO  # [INFO, WARN, ERROR]
+    io.github.resilience4j: DEBUG
+
+management:
+  endpoint:
+    web:
+      exposure:
+        include: health,info,metrics
+    health:
+      show-details: always
+
 springdoc:
   api-docs:
     path: /api-docs
