feat: set up Grafana and Prometheus for monitoring system

--- a/bank-api/src/main/resources/application.yaml
+++ b/bank-api/src/main/resources/application.yaml
@@ -34,12 +34,17 @@ logging:
     io.github.resilience4j: DEBUG
 
 management:
-  endpoint:
+  endpoints:
     web:
       exposure:
-        include: health,info,metrics
-    health:
-      show-details: always
+        include: health,info,metrics,prometheus
+    endpoint:
+      health:
+        show-details: always
+      prometheus:
+        enabled: true
+      metrics:
+        enabled: true
 
 springdoc:
   api-docs:
